# finestra-reviewr_codex

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: settings.example.yaml
config/prompts/: extract_study.txt  synthesize_comparison.txt
docs/: implementation_plan.md
src/scireview/: __init__.py  cli.py  config.py
src/scireview/api/: app.py
src/scireview/comparison/: __init__.py  evidence_matrix.py  exporter.py
src/scireview/domain/: __init__.py  documents.py  evidence.py  reviews.py  studies.py
src/scireview/embeddings/: __init__.py  base.py  sentence_transformers_backend.py
src/scireview/extraction/: __init__.py  schemas.py  service.py  study_extractor.py
src/scireview/ingestion/: __init__.py  base.py  deduplicator.py  docling_parser.py  pymupdf_parser.py  scanner.py  service.py
src/scireview/llm/: __init__.py  base.py  ollama_backend.py
src/scireview/storage/: __init__.py  database.py  models.py  repositories.py  vector_store.py
src/scireview/synthesis/: __init__.py  claim_builder.py  review_writer.py
tests/: conftest.py  test_api.py  test_deduplicator.py  test_domain_models.py  test_evidence_matrix.py  test_scanner.py  test_study_extractor.py
