[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finestra"
version = "0.1.0"
description = "Finestra local scientific literature analysis with evidence traceability."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Finestra contributors" }]
dependencies = [
  "docling>=2.0.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pymupdf>=1.24.0",
  "pyyaml>=6.0.0",
  "qdrant-client>=1.9.0",
  "sentence-transformers>=3.0.0",
  "sqlalchemy>=2.0.0",
  "typer>=0.12.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
finestra = "scireview.cli:app"
scireview = "scireview.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ANN"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["scireview"]
strict = true
warn_unreachable = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "docling.*",
  "fitz.*",
  "qdrant_client.*",
  "sentence_transformers.*",
  "pandas.*",
  "yaml.*",
  "uvicorn.*",
]
ignore_missing_imports = true
